2008-09-25  Jeffrey Stedfast  <fejj@novell.com>

	* README: Bumped version

	* configure.in: Bumped version to 2.4.0

2008-09-18  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-utils.c (g_mime_utils_header_decode_text): Check if
	rfc2047-workarounds has been enabled at runtime.

	* gmime/gmime.h (GMIME_ENABLE_RFC2047_WORKAROUNDS): New
	g_mime_init() flag so that a programmer can enable rfc2047
	workarounds at runtime.

	* gmime/gmime.c (g_mime_init): Save the init flags.

	* gmime/internet-address.c (internet_address_group_set_members):
	Add an event listener to the new members, not the unref'd old
	member list. Thanks to Peter Bloomfield for spotting this.

2008-09-18  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime.c (g_mime_init): Register all of our GObject types
	with the glib type system so that there's less risk of a
	race-condition in multi-threaded applications (not sure if this is
	a justifiable concern or not, but it doesn't hurt).

2008-09-15  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-message.c: Use the new InternetAddressList event
	system.

	* gmime/internet-address.c: Implemented a custom event system
	which gains us another 20% performance improvement.

2008-09-14  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-object.c (g_mime_object_get_type): Register this
	class as being abstract.

	* gmime/gmime-filter.c (g_mime_filter_get_type): Register this
	class as being abstract.

	* gmime/gmime-stream.c (g_mime_stream_get_type): Register this
	class as being abstract.

	* gmime/internet-address.c (decode_mailbox): Pass name->len to
	g_utf8_validate() rather than -1 since we have the length. Might
	save us some cycles.
	(internet_address_get_type): Register this class as being
	abstract.

	* gmime/gmime-parser.c (parser_init): Initialize the headerbuf and
	rawbuf buffers to something more reasonable.

2008-09-14  Jeffrey Stedfast  <fejj@novell.com>

	* README: Bumped version

	* configure.in: Bumped version to 2.3.10
